--- a/name.html
+++ b/name.html
@@ -2,3 +2,6 @@
   <h1>Hariniejeonjungkook</h1>
 </center>
 <hr>
+<h2>BTS</h2>
+<P>BTS, also known as the Bangtan Boys, is a South Korean boy band formed in 2010. The band consists of Jin, Suga, J-Hope, RM, Jimin, V, and Jung Kook, who co-write or co-produce much of their material. </P>
+
