--- a/name.html
+++ b/name.html
@@ -6,7 +6,7 @@
 <P>BTS, also known as the Bangtan Boys, is a South Korean boy band formed in 2010. The band consists of Jin, Suga, J-Hope, RM, Jimin, V, and Jung Kook, who co-write or co-produce much of their material. </P>
 
 <h5> achievements</h5>
-<p>Members: Jin; Suga; J-Hope; RM; Jimin; V; Jung Kook
-Active from: 2013
-Record labels: Hybe Corporation, Big Hit Music · See more
-Awards: American Music Award for Artist of the Year </p>
+<p><b>Members:</b> Jin; Suga; J-Hope; RM; Jimin; V; Jung Kook <br>
+<b>Active from:</b> 2013<br>
+<b>Record labels:</b> Hybe Corporation, Big Hit Music <br>
+<b>Awards:</b> American Music Award for Artist of the Year </p>
